<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/update_profile"
            android:title="Update Profile"
            android:icon="@drawable/profile_update"/>
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/logout"/>
    </group>

</menu>